# ggo

./: ggo.cabal  stack.yaml
src/: Main.hs
src/Linear/: Intersection.hs
