name:                ggo
version:             0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/fumieval/ggo#readme
license:             BSD3
license-file:        LICENSE
author:              Fumiaki Kinoshita
maintainer:          Fumiaki Kinoshita <fumiexcel@gmail.com>
copyright:           2016 Fumiaki Kinoshita
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable ggo
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -Wall
  build-depends:       base
                     , free-game
                     , random
                     , containers
                     , lens
                     , mtl
                     , transformers
                     , linear
                     , boundingboxes
                     , mwc-random

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/fumieval/ggo
